<resources>
    <string name="app_name">ScreenRec Pro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_need_help">Need help?</string>
    <string name="title_bridge_status">Bridge</string>
    <string name="bridge_intro"><b>录制管理器</b>是安装在Data或者System分区下的一个应用框架，该框架可以帮助我们实现快速无缝的内容以及者声音（Root版本包括r_Submix音源）录制，在开始录制内容之前，请先安装该框架。</string>
    <string name="title_bridge_manager">Management</string>
    <string name="title_uninstall">Uninstall</string>
    <string name="screen_cast">Screen cast</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="installing">Installing bridge</string>
    <string name="uninstalling">Un-installing bridge</string>
    <string name="install_success">Install success</string>
    <string name="uninstall_success">Un-install success</string>
    <string name="restart">Restart android</string>
    <string name="install_fail">Install fail: %1$s</string>
    <string name="uninstall_fail">Un-install fail: %1$s</string>
    <string name="report">Report</string>
    <string name="recorder_description">Recording for screen via Tor ScreenRec</string>
    <string name="remote_err">Remote error</string>
    <string name="version_name_unknown">Unknown</string>
    <string name="installed_version_name">Installed version <i>%1$s</i></string>
    <string name="bridge_not_installed">RecBridge <i>Not installed</i></string>
    <string name="title_audio_source">Audio source</string>
    <string name="audio_source_noop">Noop</string>
    <string name="audio_source_mic">Mic</string>
    <string name="audio_source_submix">Submix</string>
    <string name="quick_settings">Quick settings</string>
    <string name="title_with_audio">With audio</string>
    <string name="summary_with_audio">Source <i>%1$s</i></string>
    <string name="title_recording_browser">View my recordings</string>
    <string name="quick_function">Quick func</string>
    <string name="file_size">Size: %1$s</string>
    <string name="video_length">Length: %1$s</string>

    <string name="action_play">Play</string>
    <string name="action_remove">Remove</string>
    <string name="action_rename">Rename</string>
    <string name="action_togif">Convert to GIF</string>
    <string name="action_share">Share</string>

    <string name="result_to_gif_ok">Gif has been saved to:%s</string>
    <string name="result_to_gif_fail">Fail to convert to GIF, please file a bug!</string>

    <string name="title_perm_require">Permissions</string>
    <string name="summary_perm_require">Please check to allow me Capture your screen at the next request</string>
    <string name="title_float_view">Float window</string>
    <string name="elapse_time_zero">00:00</string>

    <string name="stop">Stop</string>
    <string name="insufficient_storage">Insufficient storage</string>
    <string name="show_touches">Show touches</string>
    <string name="hide_touches">Hide touches</string>
    <string name="recording">Recording\u2026</string>
    <string name="recording_ready_to_share">Recording ready to share</string>
    <string name="video_length_s">%s</string>
    <string name="not_enough_storage">Not enough storage available</string>
    <string name="not_projection">Missing media projection permission</string>
    <string name="start_description">Tap to start recording the screen of your device</string>
    <string name="stop_description">Tap to stop recording</string>
    <string name="with_audio">Include audio from microphone</string>
    <string name="no_audio_setting_warning">To include audio, <b>tap here to go to Settings and enable the microphone permission for this app</b></string>
    <string name="preview_size_s">Small</string>
    <string name="preview_size_n">Normal</string>
    <string name="preview_size_l">Large</string>
    <string name="orientation_p">Portrait</string>
    <string name="orientation_l">Landscape</string>
    <string name="orientation_a">AUTO</string>
    <string name="category_audio">Audio</string>
    <string name="audio_xopsed_desc"><b>NOTE:</b> Remote submix works only for device that has Xposed installed and Screenrecorder module activated</string>
    <string name="category_video">Video</string>
    <string name="category_storage">Storage</string>
    <string name="category_others">Others</string>
    <string name="category_accessibility">Accessibility</string>
    <string name="category_camera">Camera</string>
    <string name="warn_only_root">Only for root device</string>
    <string name="title_settings">Settings</string>
    <string name="title_switch_layout">Switch view</string>
    <string name="title_sound_effect">Shutter sound</string>
    <string name="title_shake_action">Shake to stop</string>
    <string name="title_float_window">Floating window</string>
    <string name="title_with_camera">Show preview</string>
    <string name="title_high_res">Resolution</string>
    <string name="title_donate">Donate</string>
    <string name="summary_donate">Offer me a cup of coffee:)</string>
    <string name="title_frame_rate">Frame rate</string>
    <string name="title_orientation">Orientation</string>
    <string name="title_preview_size">Preview size</string>
    <string name="title_switch_camera">Switch camera</string>
    <string name="title_start_delay">Delay</string>
    <string name="title_show_cd">Show countdown</string>
    <string name="title_show_touch">Show touch</string>
    <string name="title_auto_hide">Minimize</string>
    <string name="title_stop_when_screen_off">Stop when screen off</string>
    <string name="title_stop_on_volume">Stop on volume key (Exp?)</string>
    <string name="title_app_info">Feedback</string>
    <string name="title_storage">Workspace</string>
    <string name="title_app_license">License</string>
    <string name="title_with_ad">Show AD</string>
    <string name="perm_require_no_mind">No remind</string>
    <string name="summary_audio">Include audio from mic</string>
    <string name="summary_camera">Show a floating camera preview window on the UI interface</string>
    <string name="summary_auto_hide">Close app when recording</string>
    <string name="summary_start_delay">Wait for a short time before start recording</string>
    <string name="summary_storage">Find videos in %1$s</string>
    <string name="summary_with_ad">Can be closed once a click</string>
    <string name="summary_add_on">:) OOXX</string>
    <string name="summary_add_off">:(</string>
    <string name="summary_res_auto">AUTO</string>
    <string name="recorder_file_prefix">Recorder-</string>
    <string name="hint_new">New</string>
    <string name="title_licenses">Open Source Licenses</string>
    <string name="warn_sdk_title">Wtf</string>
    <string name="warn_sdk_low">This APP is built only for SDK version larger than Lollipop</string>
    <string name="app_code">Tornaco@163.com</string>
    <string name="install">Install</string>
    <string name="title_activity_drawer_screencast">DrawerScreencastActivity</string>

    <string name="xposed_desc">Recoding the screen with full system audio output</string>

    <string name="title_starting_cast">Starting recorder</string>

    <string name="title_float_control_settings">Float window</string>
    <string name="float_alpha">Alpha</string>
    <string name="float_theme">Style</string>
    <string name="theme_def">Default</string>
    <string name="theme_def_dark">Default dark</string>
    <string name="theme_def_circle">Default Circle</string>
    <string name="title_more_settings">More</string>
    <string name="title_normal_install">Normal install</string>
    <string name="summary_normal_install">Install as a 3-rd party app, but we will lose \"Submix\" audio source feature and some other root depended features.</string>
    <string name="title_install_type">Install types</string>
    <string name="title_root_install">Install with Root</string>
    <string name="summary_root_install">Install app into system/app with Root access, This is the best way to use the recording framework, you will got all features! \\n\\nHowever, for now, this way only support those AOSP liked ROMs, such as RR, LOS, Mokee, Soda, PureNexus. Please be aware to make sure your device is portable.</string>
    <string name="title_xposed_install">Xposed install</string>
    <string name="summary_xposed_install">Not supported yet</string>
    <string name="title_magisk_install">Magisk install</string>
    <string name="summary_magisk_install">Not supported yet</string>
    <string name="title_install_recommend">Recommended</string>
    <string name="title_about">About</string>
    <string name="title_buy">Buy +</string>
    <string name="title_ad">I am AD</string>
    <string name="title_ad_area">Ad area</string>
    <string name="summary_buy_intro">If you like my work, please feel free to donate!</string>
    <string name="title_alipay">AliPay</string>
    <string name="title_wechat">WeChatPay</string>
    <string name="done">Done</string>
    <string name="save_qr_code">Save image</string>
    <string name="save_by_screenshot">Please save by take s screen shot.</string>
    <string name="title_pay_ment_type">Pay by</string>
    <string name="title_pay_list">Thank list</string>
    <string name="title_thanks">Thank</string>
    <string name="title_pay_status_paid">I have paid</string>
    <string name="tornaco">Tornaco</string>
    <string name="tornaco_intro">Android framework developer, works with Telephony, Audio, AppOps, PMS etc. App development is just for fun.</string>
    <string name="title_version">App version</string>
    <string name="me">Me</string>
    <string name="app">App</string>
    <string name="open_source">Open source</string>
    <string name="title_email">Email</string>
    <string name="release">Releases</string>
    <string name="title_install">Install</string>
    <string name="update_available">Bridge update</string>
    <string name="update_available_message">New bridge of version %1$s is now available, would you like to install now?</string>
</resources>
