<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cast"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/screen_cast" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_shop_black_24dp"
                android:title="@string/title_buy" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/title_about" />
        </menu>
    </item>

</menu>
