<!--
  ~ Copyright (c) 2016 Nick Guo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".content.ScreenCastActivity">
    <item
        android:id="@+id/action_play"
        android:title="@string/action_play" />
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_remove" />
    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/action_rename" />
    <item
        android:id="@+id/action_togif"
        android:title="@string/action_togif" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/action_share" />
</menu>
